[project]
authors = [{name = "Aasish Kumar Sharma", email = "aasish.sharma@uni-goettingen.de"}]
name = "snakemake-scheduler-plugin-milp_ext"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["snakemake-interface-scheduler-plugins>=2.0.0,<3.0.0", "snakemake>=9.9.0,<10"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
snakemake_scheduler_plugin_milp_ext = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
networkx = ">=2.5"
pyyaml = ">=5.0"
pulp = ">=2.0"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
format = { features = ["format"], solve-group = "default" }

[dependency-groups]
test = ["pytest"]
format = ["isort", "flake8", "black"]
